--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,11 @@
         android:layout_height="wrap_content"
         android:text="터치 테스트"
         android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/btn_dbTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DB"
+        android:textSize="24sp" />
 </LinearLayout>
